appview: pages/templates: fix up copy

--- a/appview/pages/templates/repo/pulls/fragments/pullCompareForks.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullCompareForks.html
@@ -39,4 +39,8 @@
             </div>
         </div>
     </div>
+    <p class="mt-4">
+        Title and description are optional; if left out, they will be extracted
+        from the first commit.
+    </p>
 {{ end }}
