--- a/appview/pages/templates/repo/pulls/fragments/pullCompareBranches.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullCompareBranches.html
@@ -17,4 +17,9 @@
             </select>
         </div>
     </div>
+
+    <p class="mt-4">
+        Title and description are optional; if left out, they will be extracted
+        from the first commit.
+    </p>
 {{ end }}
