--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -6,8 +6,6 @@
     {{ template "repo/pulls/fragments/pullHeader" . }}
 {{ end }}
 
-
-
 {{ define "repoAfter" }}
     <section id="submissions" class="mt-4">
       <div class="flex flex-col gap-4">
@@ -65,11 +63,12 @@
         </summary>
         
         {{ if .IsFormatPatch }}
-        <div class="rounded ml-12 drop-shadow-sm bg-white dark:bg-gray-800 dark:text-white w-fit md:max-w-3/5 flex flex-col gap-2 mt-2 relative">
-           {{ $patches := .AsFormatPatch }}
-           {{ range $patches }}
-           <div id="commit-{{.SHA}}" class="py-2 px-4 relative w-full md:max-w-3/5 md:w-fit flex flex-col">
+        {{ $patches := .AsFormatPatch }}
+        {{ range $patches }}
+        <div class="rounded ml-20 drop-shadow-sm bg-white dark:bg-gray-800 dark:text-white w-fit md:max-w-3/5 flex flex-col gap-2 mt-2 relative">
+           <div id="commit-{{.SHA}}" class="py-2 px-2 relative w-full md:max-w-3/5 md:w-fit flex flex-col">
              <div class="flex items-center justify-between gap-2">
+              <div class="mr-4 flex items-center justify-start">
                {{ i "git-commit-horizontal" "w-4 h-4 mr-1.5" }}
                <span>{{ .Title }}</span>
                {{ if gt (len .Body) 0 }}
@@ -80,6 +79,7 @@
                  {{ i "ellipsis" "w-3 h-3" }}
                </button>
                {{ end }}
+              </div>
                <div class="text-sm text-gray-500 dark:text-gray-400">
                  {{ if not $.Pull.IsPatchBased }}
                    {{ $fullRepo := $.RepoInfo.FullName }}
@@ -98,8 +98,8 @@
              </p>
              {{ end }}
            </div>
-           {{ end }}
         </div>
+        {{ end }}
         {{ end }}
 
 
