--- a/appview/pages/templates/repo/pulls/interdiff.html
+++ b/appview/pages/templates/repo/pulls/interdiff.html
@@ -3,7 +3,7 @@
 {{ end }}
 
 {{ define "content" }}
-  <div class="rounded drop-shadow-sm bg-white dark:bg-gray-800 py-4 px-6 dark:text-white">
+  <section class="rounded drop-shadow-sm bg-white dark:bg-gray-800 py-4 px-6 dark:text-white">
     <header class="pb-2">
       <div class="flex gap-3 items-center mb-3">
         <a href="/{{ .RepoInfo.FullName }}/pulls/{{ .Pull.PullId }}/" class="flex items-center gap-2 font-medium">
@@ -14,12 +14,9 @@
         interdiff of round #{{ .Round }} and #{{ sub .Round 1 }}
       </div>
       <div class="border-t border-gray-200 dark:border-gray-700 my-2"></div>
-      <h1 class="text-2xl mt-3">
-        {{ .Pull.Title }}
-        <span class="text-gray-500 dark:text-gray-400">#{{ .Pull.PullId }}</span>
-      </h1>
+      {{ template "repo/pulls/fragments/pullHeader" . }}
     </header>
-  </div>
+  </section>
 
   <section>
     {{ template "repo/fragments/interdiff" (list .RepoInfo.FullName .Interdiff) }}
