--- a/appview/pages/templates/repo/pulls/pull.html
+++ b/appview/pages/templates/repo/pulls/pull.html
@@ -51,13 +51,18 @@
               </span>
             </div>
 
-            {{ if $.Pull.IsPatchBased }}
-            <!-- view patch -->
             <a class="btn flex items-center gap-2 no-underline hover:no-underline p-2"
                hx-boost="true"
                href="/{{ $.RepoInfo.FullName }}/pulls/{{ $.Pull.PullId }}/round/{{.RoundNumber}}">
               {{ i "file-diff" "w-4 h-4" }} <span class="hidden md:inline">view patch</span>
             </a>
+            {{ if not (eq .RoundNumber 0) }}
+            <a class="btn flex items-center gap-2 no-underline hover:no-underline p-2"
+               hx-boost="true"
+               href="/{{ $.RepoInfo.FullName }}/pulls/{{ $.Pull.PullId }}/round/{{.RoundNumber}}/interdiff">
+              {{ i "file-diff" "w-4 h-4" }} <span class="hidden md:inline">interdiff</span>
+            </a>
+            <span id="interdiff-error-{{.RoundNumber}}"></span>
             {{ end }}
           </div>
         </summary>
