appview: profile: fix closed-pulls pill style

--- a/appview/pages/templates/user/profile.html
+++ b/appview/pages/templates/user/profile.html
@@ -179,7 +179,7 @@
 
 
           {{ if gt $stats.Closed 0 }}
-          <span class="px-2 py-1/2 text-sm rounded text-black dark:text-white bg-gray-50 dark:bg-gray-700 ">
+          <span class="px-2 py-1/2 text-sm rounded text-white bg-gray-800 dark:bg-gray-700">
             {{$stats.Closed}} closed
           </span>
           {{ end }}
