--- a/appview/pages/templates/knot.html
+++ b/appview/pages/templates/knot.html
@@ -83,8 +83,8 @@
     class="max-w-2xl space-y-4">
     <input
       type="text"
-      id="member"
-      name="member"
+      id="subject"
+      name="subject"
       placeholder="did or handle"
       required
       class="w-full dark:bg-gray-700 dark:text-white dark:border-gray-600 dark:placeholder-gray-400"/>
